--- a/src/main_for_sample/forklift/CMakeLists.txt
+++ b/src/main_for_sample/forklift/CMakeLists.txt
@@ -14,7 +14,10 @@ target_include_directories(forklift_sim
     PRIVATE ${PROJECT_ROOT_DIR}/src/mujoco-common
     PRIVATE ${PROJECT_ROOT_DIR}/src
     PRIVATE ${PROJECT_ROOT_DIR}/include
-    PRIVATE ${GLFW_DIR})
+    PRIVATE ${GLFW_DIR}
+    PRIVATE ${ROS2PDU_SOURCE_DIR}/pdu/types
+    PRIVATE ${HAKO_CORE_SOURCE_DIR}
+    )
 
 # MuJoCoライブラリをリンク
 target_link_libraries(forklift_sim 
