--- a/src/main_for_sample/forklift/CMakeLists.txt
+++ b/src/main_for_sample/forklift/CMakeLists.txt
@@ -24,5 +24,7 @@ target_link_libraries(forklift_sim
     ${LIBMUJOCO}
    glfw
     ${OPENGL_gl_LIBRARY}
+    assets
+    conductor
     "-framework OpenGL"
 )
