--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -83,18 +83,20 @@ endif()
 set(HAKO_CORE_DIR "${PROJECT_SOURCE_DIR}/../thirdparty/hakoniwa-core-cpp-client")
 
 option(USE_VIEWER "Enable MuJoCo viewer" ON)
-
+MESSAGE(STATUS "USE_VIEWER=${USE_VIEWER}")
 if(USE_VIEWER)
+    MESSAGE(STATUS "MuJoCo viewer enabled")
     find_package(OpenGL REQUIRED)
     find_package(glfw3 REQUIRED)
     add_library(mujoco-common STATIC mujoco-common/mujoco_viewer.cpp mujoco-common/mujoco_debug.cpp)
     target_include_directories(mujoco-common PUBLIC mujoco-common)
     if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-        target_link_libraries(mujoco-common PUBLIC ${OpenGL_LIBRARIES} glfw)
+        target_link_libraries(mujoco-common PUBLIC ${OpenGL_LIBRARIES} "-framework OpenGL" glfw)
     else()
         target_link_libraries(mujoco-common PUBLIC OpenGL::GL glfw)
     endif()
 else()
+    MESSAGE(STATUS "MuJoCo viewer disabled")
     add_library(mujoco-common STATIC mujoco-common/mujoco_debug.cpp)
     target_include_directories(mujoco-common PUBLIC mujoco-common)
 endif()
